--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><style>* {
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light"><style>* {
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 0;
+  background-image: url("https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/white-bg.png");
+  background-repeat: repeat;
   color: #502882;
+  box-sizing: border-box;
 }
 
 img {
@@ -153,9 +156,9 @@ a {
 .tag {
   background-color: #ffffff;
   display: inline-block;
-  width: auto !important;
+  width: auto;
   padding: 3px 5px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .btn {
@@ -174,9 +177,9 @@ a {
 .btn div {
   display: inline-block;
   color: white;
-  padding: 7px 10px 11px;
+  padding: 11px 10px 11px;
   height: 100%;
-  vertical-align: middle;
+  vertical-align: top;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: bold;
@@ -196,9 +199,6 @@ a.btn-secondary img {
   margin-left: 10px;
 }
 
-.info-tags span {
-}
-
 /* SECTION */
 .section {
   padding-bottom: 10px;
@@ -209,7 +209,7 @@ a.btn-secondary img {
 }
 
 .section-body {
-  padding: 30px 10px;
+  padding: 30px 10px 50px;
 }
 
 .section-header.big {
@@ -218,7 +218,7 @@ a.btn-secondary img {
 .section-header {
   height: 50px;
   width: auto;
-  padding-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .section-top img {
@@ -270,12 +270,16 @@ a.btn-secondary img {
 .figure-banner {
   text-decoration: none;
   display: block;
-  padding: 15px 0;
+  padding: 30px 0;
 }
+
+.figure-banner > img {
+  margin-bottom: 10px;
+}
+
 .figure-banner h1 {
   text-decoration: underline;
   margin-bottom: 10px;
-  margin-top: 30px;
 }
 .figure-banner .btn {
   margin-top: 20px;
@@ -301,9 +305,9 @@ a.btn-secondary img {
   text-align: center;
 }
 .newsletter {
-  min-width: 320px;
   max-width: 800px;
   width: 100%;
+  background-color: white !important;
 }
 
 .hero .logo img {
@@ -314,6 +318,14 @@ a.btn-secondary img {
 .hero .date {
   text-align: right;
   vertical-align: top;
+}
+
+.hero h1 {
+  font-size: 30px;
+  width: 80%;
+}
+.hero .body-text {
+  font-size: 18px;
 }
 
 .hero-header td {
@@ -331,11 +343,11 @@ a.btn-secondary img {
 }
 
 .show-in-browser td {
-  padding: 5px 0 12px;
+  padding: 7px 0 12px;
   text-align: center;
 }
 
 .pelmel h4 {
   padding: 0.25em 0;
 }
-</style><title>JIC Newsletter</title></head><body> <table class="newsletter"><tr class="show-in-browser"> <td class="content gray-bg"><span><a class="gray-text" href="#">Zobrazte si newsletter v prohlížeči</a></span></td></tr><tr><td><table class="hero"><tr class="hero-header"><td class="logo"><img src="/images/jic-logo.png"></td><td class="date content"><span class="caption">květen 2022</span></td></tr><tr><td class="content hero-content layout" colspan="2"><h1 class="section-header">Zaří patří Velvet Innovation </h1><p class="body-text">Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek</p><h4 class="body-header">Top výběr z newsletteru</h4><ul><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li></ul></td></tr></table></td></tr><tr><td class="layout"><table class="section"><tr class="section-top"><td><img src="images/noise-pink.png"></td></tr><tr><td class="section-body pink-bg"><img class="section-header" src="images/magazine-header.png"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="#"><img src="images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td class="grid-item-small"><a href="#"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td><td class="grid-item-small"><a href="#"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td colspan="2"><a class="btn-secondary" href="#"> <span>všechny články</span><img src="images/arrow.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td class="section-body yellow-bg"><img class="section-header" src="images/events-header.png"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="#"><img src="images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td class="grid-item-small"><a href="#"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td><td class="grid-item-small"><a href="#"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td colspan="2"><a class="btn-secondary" href="#"> <span>všechny akce</span><img src="images/arrow.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td class="section-body blue-bg"><img class="section-header big" src="images/pelmel-header.png"><table class="grid"><tr><td class="pelmel" colspan="2"><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a></td></tr></table></td></tr></table><table class="section"><tr><td class="section-body gray-bg"><img class="section-header big" src="images/startup-header.png"><table class="grid"><tr><td class="content"><a class="startup-item" href="#"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="#"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="#"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a></td></tr></table></td></tr></table><table class="section"><tr><td class="section-body green-bg"><img class="section-header" src="images/advices-header.png"><table class="grid"><tr><td><img src="/images/placeholder.png"><div class="quote content"><img class="quotes" src="/images/quotes.png"><p class="big">Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět.</p><h3>Petr Chládek</h3><span>Ředitel JIC</span></div></td></tr></table></td></tr></table></td></tr><tr>               <td class="layout"><a class="blockquote" href="http://"> <h2>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</h2><div class="btn"> <img src="/images/btn-side.png"><div>Zjistit více</div><img src="/images/btn-side.png"></div></a></td></tr><tr><td class="layout"><a class="figure-banner" href="http://"> <img src="images/placeholder.png"><div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="/images/btn-side.png"><div>Zjistit více</div><img src="/images/btn-side.png"></div></a><a class="figure-banner" href="http://"> <div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="/images/btn-side.png"><div>Zjistit více</div><img src="/images/btn-side.png"></div></a></td></tr><tr><td class="footer"><div class="violet-bg"><img class="section-header big" src="images/contact-header.png"><p class="white-text">Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na <a href="#">marketing@jic.cz</a></p><table class="socials"><tr><td><a href="http://"> <img src="/images/fb.png"></a></td><td><a href="http://"> <img src="/images/in.png"></a></td><td><a href="http://"> <img src="/images/ig.png"></a></td><td><a href="http://"> <img src="/images/yt.png"></a></td><td><a href="http://"> <img src="/images/tw.png"></a></td></tr></table></div><img src="/images/noise-violet.png"></td></tr></table></body><a class="unsub violet-text" href="http://">Pro odhlášení z odběru newsletteru klikněte zde</a></html>
+</style><title>JIC Newsletter</title></head><body> <table class="newsletter"><tr class="show-in-browser"> <td class="content gray-bg"><span><a class="gray-text" href="http://">Zobrazte si newsletter v prohlížeči</a></span></td></tr><tr><td><table class="hero"><tr class="hero-header"><td class="logo"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/jic-logo.png"></td><td class="date content"><span class="caption">květen 2022</span></td></tr><tr><td class="content hero-content layout" colspan="2"><h1>Září patří Velvet Innovation </h1><p class="body-text">Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek</p><h4 class="body-header">Top výběr z newsletteru</h4><ul><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li></ul></td></tr></table></td></tr><tr><td class="layout"><table class="section"><tr class="section-top"><td><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/noise-pink.png"></td></tr><tr><td class="section-body pink-bg"><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/magazine-header.png"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="http://"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td colspan="2"><a class="btn-secondary" href="http://"> <span>všechny články</span><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/arrow.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td class="section-body yellow-bg"><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/events-header.png"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="http://"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td colspan="2"><a class="btn-secondary" href="http://"> <span>všechny akce</span><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/arrow.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td class="section-body blue-bg"><img class="section-header big" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/pelmel-header.png"><table class="grid"><tr><td class="pelmel" colspan="2"><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a></td></tr></table></td></tr></table><table class="section"><tr><td class="section-body gray-bg"><img class="section-header big" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/startup-header.png"><table class="grid"><tr><td class="content"><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a></td></tr></table></td></tr></table><table class="section"><tr><td class="section-body green-bg"><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/advices-header.png"><table class="grid"><tr><td><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="quote content"><img class="quotes" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/quotes.png"><p class="big">Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět.</p><h3>Petr Chládek</h3><span>Ředitel JIC</span></div></td></tr></table></td></tr></table></td></tr><tr>               <td class="layout"><a class="blockquote" href="http://"> <h2>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</h2><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"><div>Zjistit více</div><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"></div></a></td></tr><tr><td class="layout"><a class="figure-banner" href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"><div>Zjistit více</div><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"></div></a><a class="figure-banner" href="http://"> <div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"><div>Zjistit více</div><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"></div></a></td></tr><tr><td class="footer"><div class="violet-bg"><img class="section-header big" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/contact-header.png"><p class="white-text">Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na <a href="http://">marketing@jic.cz</a></p><table class="socials"><tr><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/fb.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/in.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/ig.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/yt.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/tw.png"></a></td></tr></table></div><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/noise-violet.png"></td></tr></table></body><a class="unsub violet-text" href="http://">Pro odhlášení z odběru newsletteru klikněte zde</a></html>
