--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+.newsletter {
+  max-width: 600px;
+  width: 100%;
+  background-color: white;
+}
+
 u + .body .screen {
   background: #000;
   mix-blend-mode: screen;
@@ -119,6 +125,45 @@ table {
   background-image: url("/images/violet-bg.png");
 }
 
+/* TOPBAR */
+.show-in-browser td {
+  padding: 7px 0 12px;
+  text-align: center;
+}
+
+/* HERO */
+.hero .logo img {
+  width: 77px;
+  height: auto;
+}
+
+.hero .date {
+  text-align: right;
+  vertical-align: top;
+}
+
+.hero h1 {
+  font-size: 30px;
+  width: 80%;
+}
+.hero .body-text {
+  font-size: 18px;
+}
+
+.hero-header td {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.hero-content > * {
+  padding: 10px 0;
+}
+.hero-content {
+  padding-bottom: 30px;
+}
+
 /* GRID */
 .grid-item-big,
 .grid-item-small {
@@ -175,26 +220,13 @@ table {
   display: inline-block;
   width: auto;
   height: 33px;
-  background-color: #502882;
   text-transform: uppercase;
 }
 
 .btn img {
-  display: inline;
   height: 100%;
+  object-fit: contain;
   width: auto;
-}
-
-.btn div {
-  display: inline-block;
-  color: white;
-  padding: 11px 10px 11px;
-  height: 100%;
-  vertical-align: top;
-  text-transform: uppercase;
-  font-size: 10px;
-  font-weight: bold;
-  letter-spacing: 0.03em;
 }
 
 a.btn-secondary {
@@ -303,6 +335,7 @@ a.btn-secondary img {
   text-decoration: underline;
   margin-bottom: 10px;
 }
+
 .figure-banner .btn {
   margin-top: 20px;
 }
@@ -311,68 +344,28 @@ a.btn-secondary img {
 .footer {
   padding: 0 10px;
 }
+
 .footer > div {
   padding: 30px 10px;
 }
+
 .socials {
   width: 130px;
-  margin-top: 60px;
+  margin-top: 30px;
 }
+
 .socials img {
-  width: 24px;
+  height: 24px;
 }
 
 .unsub {
   font-size: 11px;
   display: block;
   margin: 20px 0;
-  text-align: center;
-}
-.newsletter {
-  max-width: 800px;
-  width: 100%;
-  background-color: white;
-  /* background-image: url("https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/white-bg.png"); */
-}
-
-.hero .logo img {
-  width: 77px;
-  height: auto;
-}
-
-.hero .date {
-  text-align: right;
-  vertical-align: top;
-}
-
-.hero h1 {
-  font-size: 30px;
-  width: 80%;
-}
-.hero .body-text {
-  font-size: 18px;
-}
-
-.hero-header td {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.hero-content > * {
-  padding: 10px 0;
-}
-.hero-content {
-  padding-bottom: 30px;
-}
-
-.show-in-browser td {
-  padding: 7px 0 12px;
-  text-align: center;
+  padding-left: 20px;
 }
 
 .pelmel h4 {
   padding: 0.25em 0;
 }
-</style><title>JIC Newsletter</title></head><body> <table class="newsletter"><tr class="show-in-browser"> <td class="content gray-bg"><span><a class="gray-text" href="http://">Zobrazte si newsletter v prohlížeči</a></span></td></tr><tr><td><table class="hero"><tr class="hero-header"><td class="logo"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/jic-logo.png"></td><td class="date content"><span class="caption">květen 2022</span></td></tr><tr><td class="content hero-content layout" colspan="2"><h1>Září patří Velvet Innovation </h1><p class="body-text">Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek</p><h4 class="body-header">Top výběr z newsletteru</h4><ul><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li></ul></td></tr></table></td></tr><tr><td class="layout"><table class="section"><tr class="section-top"><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-magazine.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="http://"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td colspan="2"><a class="btn-secondary" href="http://"> <span>všechny články</span><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/arrow.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-events.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="http://"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td colspan="2"><a class="btn-secondary" href="http://"> <span>všechny akce</span><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/arrow.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-pelmel.png"></td></tr><tr><td class="section-body margin"><table class="grid"><tr><td class="pelmel" colspan="2"><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-startup.png"></td></tr><tr><td class="section-body margin"><table class="grid"><tr><td class="content"><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-advices.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="quote content"><img class="quotes" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/quotes.png"><p class="big">Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět.</p><h3>Petr Chládek</h3><span>Ředitel JIC</span></div></td></tr></table></td></tr></table></td></tr><tr>               <td class="layout"><a class="blockquote" href="http://"> <h2>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</h2><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"><div>Zjistit více</div><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"></div></a></td></tr><tr><td class="layout"><a class="figure-banner" href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"><div>Zjistit více</div><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"></div></a><a class="figure-banner" href="http://"> <div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"><div>Zjistit více</div><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-side.png"></div></a></td></tr><tr><td class="footer"><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-footer.png"><div class="section-body margin"><p>Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na <a href="http://">marketing@jic.cz</a></p><table class="socials"><tr><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/fb-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/in-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/ig-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/yt-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/tw-dark.png"></a></td></tr></table></div></td></tr></table></body><a class="unsub violet-text" href="http://">Pro odhlášení z odběru newsletteru klikněte zde</a></html>
+</style><title>JIC Newsletter</title></head><body> <table class="newsletter"><tr class="show-in-browser"> <td class="content gray-bg"><span><a class="gray-text" href="http://">Zobrazte si newsletter v prohlížeči</a></span></td></tr><tr><td><table class="hero"><tr class="hero-header"><td class="logo"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/jic-logo.png"></td><td class="date content"><span class="caption">květen 2022</span></td></tr><tr><td class="content hero-content layout" colspan="2"><h1>Září patří Velvet Innovation </h1><p class="body-text">Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek</p><h4 class="body-header">Top výběr z newsletteru</h4><ul><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li><li>Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum</li></ul></td></tr></table></td></tr><tr><td class="layout"><table class="section"><tr class="section-top"><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-magazine.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="http://"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div></a></td></tr><tr><td colspan="2"><a class="btn" href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-all-articles.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-events.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td class="grid-item-big" colspan="2"><a href="http://"><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><span class="tag">jic talk</span><h1>Nadpis lorem ipsum</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td><td class="grid-item-small"><a href="http://"><div class="content"><span class="tag">jic talk</span><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p><div class="info-tags"><span>19. 2. 2022, 19 – 21 hod.</span><span>brno-medlánky</span></div></div></a></td></tr><tr><td colspan="2"><a class="btn" href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-all-events.png"></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-pelmel.png"></td></tr><tr><td class="section-body margin"><table class="grid"><tr><td class="pelmel" colspan="2"><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a><a href="http://"> <h4>Kiwi se vrací do hry</h4></a><a href="http://"> <h4>Musk koupil Twitter</h4></a><a href="http://"> <h4>Smartlook jde za moře</h4></a><a href="http://"> <h4>Solitea zase nakupuje</h4></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-startup.png"></td></tr><tr><td class="section-body margin"><table class="grid"><tr><td class="content"><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a><a class="startup-item" href="http://"><h4>Nadpis lorem ipsum</h4><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></a></td></tr></table></td></tr></table><table class="section"><tr><td><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-advices.png"></td></tr><tr><td class="section-body"><table class="grid"><tr><td><img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="quote content"><img class="quotes" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/quotes.png"><p class="big">Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět.</p><h3>Petr Chládek</h3><span>Ředitel JIC</span></div></td></tr></table></td></tr></table></td></tr><tr>               <td class="layout"><a class="blockquote" href="http://"> <h2>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</h2><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-learn-more.png"></div></a></td></tr><tr><td class="layout"><a class="figure-banner" href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/placeholder.png"><div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-learn-more.png"></div></a><a class="figure-banner" href="http://"> <div class="content"><h1>Nadpis textového bloku</h1><p>Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.</p></div><div class="btn"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/btn-learn-more.png"></div></a></td></tr><tr><td class="footer"><img class="section-header" src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/header-footer.png"><div class="section-body margin"><p>Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na <a href="http://">marketing@jic.cz</a></p><table class="socials"><tr><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/fb-dark-cutted.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/in-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/ig-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/yt-dark.png"></a></td><td><a href="http://"> <img src="https://cdn.jsdelivr.net/gh/dominik2323/JIC_NEWSLETTER@latest/images/tw-dark.png"></a></td></tr></table></div></td></tr></table></body><a class="unsub violet-text" href="http://">Pro odhlášení z odběru newsletteru klikněte zde</a></html>
